--- a/Touchston Brother IpP/packages.config
+++ b/Touchston Brother IpP/packages.config
@@ -3,5 +3,9 @@
   <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.4.1.1101" targetFramework="net461" />
+  <package id="SqlTableDependency" version="8.5.1" targetFramework="net461" />
   <package id="Syroot.Windows.IO.KnownFolders" version="1.2.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.3.0" targetFramework="net461" />
 </packages>
