--- a/Touchstone Brother IpP/App.config
+++ b/Touchstone Brother IpP/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Touchston_Brother_IpP.Properties.Settings.dbCustomersConnectionString"
+        <add name="Touchstone_Brother_IpP.Properties.Settings.dbCustomersConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\dbCustomers.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
