--- a/Touchstone Brother IpP/Touchstone Brother IpP.csproj
+++ b/Touchstone Brother IpP/Touchstone Brother IpP.csproj
@@ -59,6 +59,9 @@
     <Reference Include="Firebase, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FirebaseDatabase.net.3.3.3\lib\netstandard1.1\Firebase.dll</HintPath>
     </Reference>
+    <Reference Include="Firebase.Auth, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FirebaseAuthentication.net.3.0.7\lib\netstandard1.1\Firebase.Auth.dll</HintPath>
+    </Reference>
     <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
     </Reference>
@@ -202,11 +205,12 @@
     <Compile Include="Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Intergrated\ConnectionManagement.cs" />
     <Compile Include="Labels.xaml.cs">
       <DependentUpon>Labels.xaml</DependentUpon>
     </Compile>
     <Compile Include="Intergrated\FirebaseManagement.cs" />
-    <Compile Include="Intergrated\PDFManagment.cs" />
+    <Compile Include="Intergrated\PDFManagement.cs" />
     <Compile Include="Intergrated\PrintManagement.cs" />
     <Compile Include="Models\MainWindowViewModel.cs" />
     <Compile Include="PopDialog.xaml.cs">
@@ -216,6 +220,9 @@
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Startup.xaml.cs">
+      <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
     <Page Include="Customers.xaml">
       <SubType>Designer</SubType>
@@ -242,6 +249,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="PopDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Startup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
