--- a/Touchstone Brother IpP/packages.config
+++ b/Touchstone Brother IpP/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FirebaseAuthentication.net" version="3.0.7" targetFramework="net461" />
   <package id="FirebaseDatabase.net" version="3.3.3" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
