--- a/Touchstone Brother IpP/packages.config
+++ b/Touchstone Brother IpP/packages.config
@@ -39,7 +39,17 @@
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reactive" version="4.1.0" targetFramework="net461" />
+  <package id="System.Reactive" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Compatibility" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Experimental" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Providers" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Runtime.Remoting" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Forms" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="4.1.2" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
