Started Remodeling the firebase structrue of the database to be more effetive and useful especially with barcodes. Implimented barcodes into the customer display view. Customer labels are now catagorised based on customer UID genereated offline in the app and forwarded to the firebase, genertaed using UID. Suggest: Cleaning up database to work with data structure. Settingup a barcode Printing system. Fix label deletion and customer deletion

--- a/Touchstone Brother IpP/App.config
+++ b/Touchstone Brother IpP/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Touchstone_Brother_IpP.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings />
     <startup> 
@@ -38,4 +41,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Touchstone_Brother_IpP.Properties.Settings>
+      <setting name="Email" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UsePrevEmail" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </Touchstone_Brother_IpP.Properties.Settings>
+  </userSettings>
 </configuration>
