--- a/Touchstone Brother IpP/packages.config
+++ b/Touchstone Brother IpP/packages.config
@@ -13,6 +13,7 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net461" />
+  <package id="QRCoder" version="1.3.3" targetFramework="net461" />
   <package id="SqlTableDependency" version="8.5.1" targetFramework="net461" />
   <package id="Syroot.Windows.IO.KnownFolders" version="1.2.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
@@ -26,6 +27,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" />
